完成主页中图片滑动选择逻辑

--- a/SmartAlbums/app/src/main/AndroidManifest.xml
+++ b/SmartAlbums/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".LocalAlbumActivity"/>
+        <activity android:name=".HomeActivity"/>
     </application>
 
     <!--拍照-->
