新增3个二级页面

--- a/SmartAlbums/app/src/main/AndroidManifest.xml
+++ b/SmartAlbums/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         </activity>
         <activity android:name=".LocalAlbumActivity"/>
         <activity android:name=".HomeActivity"/>
+        <activity android:name="HomePeopleAlbumActivity"/>
+        <activity android:name="HomeImageScoreActivity"/>
+        <activity android:name=".HomeExcellentVideoActivity"/>
     </application>
 
     <!--拍照-->
