增加选择图片子相册逻辑

--- a/SmartAlbums/app/src/main/AndroidManifest.xml
+++ b/SmartAlbums/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name="HomePeopleAlbumActivity"/>
         <activity android:name="HomeImageScoreActivity"/>
         <activity android:name=".HomeExcellentVideoActivity"/>
+        <activity android:name="SelectImageActivity"/>
     </application>
 
     <!--拍照-->
