AndroidManifest添加人脸检测人脸验证页面

--- a/SmartAlbums/app/src/main/AndroidManifest.xml
+++ b/SmartAlbums/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         <activity android:name="HomeImageScoreActivity"/>
         <activity android:name=".HomeExcellentVideoActivity"/>
         <activity android:name="SelectImageActivity"/>
+        <activity android:name=".FaceDetectionActivity"/>
+        <activity android:name=".FaceVerificationActivity"/>
     </application>
 
     <!--拍照-->
